<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backroundd"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button_2"
        android:layout_width="363dp"
        android:layout_height="69dp"
        android:layout_marginTop="48dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:shape="rectangle"
        android:text="@string/button_2"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/button_3"
        android:layout_width="323dp"
        android:layout_height="69dp"
        android:layout_marginTop="164dp"
        android:background="#00000000"
        android:text="@string/button_3"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="319dp"
        android:layout_height="69dp"
        android:layout_marginTop="276dp"
        android:background="#00000000"
        android:text="@string/button_4"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="146dp"
        android:layout_height="62dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:text="@string/Concentration"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="161dp"
        android:layout_height="69dp"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:text="@string/Reset"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="122dp"
        android:layout_height="42dp"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:format="%s"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/playingtext"
        android:layout_width="57dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>